--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,5 +1,5 @@
 <div class="flashcard" id="question">
-  <%= markdown(@card.question) -%>
+  <%= raw markdown(@card.question) %>
 </div>
 
 <strong>Answer:</strong>
