--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -6,13 +6,14 @@
   background-color: #ffffff;
   border: 2px solid #eaeaea;
   border-radius: 5px;
+  padding: 0.125rem 0.25rem;
 }
 
-code {
+.highlight {
   background-color: #f7f7f7;
   border-radius: 3px;
   font-family: monaco;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   padding: 0.125rem 0.25rem;
   margin: 1.25rem 0.25rem 1.25rem 0.25rem;
 }
