--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -7,6 +7,11 @@
   border: 2px solid #eaeaea;
   border-radius: 5px;
   padding: 0.125rem 0.25rem;
+
+  h1 { font-size: 22px; }
+  h2 { font-size: 20px; }
+  h3 { font-size: 18px; }
+  p { font-size: 14px; }
 }
 
 .highlight {
